--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.0",
     "connected-react-router": "^6.8.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "history": "^4.10.1",
     "material-ui-chip-input": "^2.0.0-beta.2",
     "material-ui-markdown-editor": "^1.0.10",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
